[gd_scene load_steps=34 format=2]

[ext_resource path="res://Menus/HUD/Hud.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/white.png" type="Texture" id=2]
[ext_resource path="res://Objects/Game_modes/FFA/FFAMinimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/HUD/fistfinal.png" type="Texture" id=4]
[ext_resource path="res://Menus/HUD/scope3.png" type="Texture" id=5]
[ext_resource path="res://Menus/HUD/grenedefinal.png" type="Texture" id=6]
[ext_resource path="res://font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menus/HUD/pause3.png" type="Texture" id=8]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=9]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Sprites/UI/bullet.png" type="Texture" id=11]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://Menus/resources/next_gun.png" type="Texture" id=13]
[ext_resource path="res://controls/controllers/default_controller.tscn" type="PackedScene" id=14]
[ext_resource path="res://Fonts/ARIALBD.TTF" type="DynamicFontData" id=15]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=16]
[ext_resource path="res://Sprites/UI/plus_HP.png" type="Texture" id=17]
[ext_resource path="res://Sprites/UI/sheild_AP.png" type="Texture" id=18]

[sub_resource type="CircleShape2D" id=1]
radius = 98.0

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 40 )

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[sub_resource type="CircleShape2D" id=5]
radius = 45.0

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0.686275 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="DynamicFont" id=9]
size = 20
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 20
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 40, 40 )

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 70, 25 )

[sub_resource type="DynamicFont" id=14]
size = 36
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Hud" type="CanvasLayer" groups=[
"Hud",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.574
anchor_top = 0.837
anchor_right = 0.68
anchor_bottom = 0.974
margin_left = 0.279846
margin_top = 0.359985
margin_right = -0.400208
margin_bottom = -0.280029
__meta__ = {
"_edit_use_anchors_": false
}

[node name="melee" type="TouchScreenButton" parent="Control"]
position = Vector2( -340.116, -92.895 )
scale = Vector2( 0.754964, 0.465095 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="reload" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.067
anchor_right = 1.0
anchor_bottom = 0.067
margin_left = -188.0
margin_top = -41.24
margin_right = -91.0
margin_bottom = 4.76
rect_scale = Vector2( 1.70963, 1.78606 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_s" type="TextureRect" parent="reload"]
margin_left = 3.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 43.0
rect_min_size = Vector2( 91, 40 )
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="TouchScreenButton" parent="reload"]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.584922, 0.559892 )
shape = SubResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="reload"]
self_modulate = Color( 1, 1, 1, 0.470588 )
anchor_left = 0.031
anchor_top = 0.254
anchor_right = 0.969
anchor_bottom = 0.935
margin_left = -0.00700021
margin_top = -8.684
margin_right = 0.00699615
margin_bottom = -0.0100021
mouse_filter = 2
value = 50.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.0156863, 0.956863, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b1" type="Sprite" parent="reload"]
position = Vector2( 82.2771, 57.2319 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="b2" type="Sprite" parent="reload"]
position = Vector2( 56, 57.232 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="b3" type="Sprite" parent="reload"]
position = Vector2( 32.5897, 57.4767 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="b4" type="Sprite" parent="reload"]
position = Vector2( 10.8183, 57.7213 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="zoom" type="TextureButton" parent="."]
anchor_left = 0.017
anchor_top = 0.165
anchor_right = 0.079
anchor_bottom = 0.263
margin_left = -0.262001
margin_top = -0.309006
margin_right = 0.377998
margin_bottom = 0.130981
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom" type="TouchScreenButton" parent="zoom"]
position = Vector2( 1.1376, -4.55041 )
shape = SubResource( 4 )

[node name="HE" type="TextureButton" parent="."]
anchor_left = 0.243
anchor_top = 0.548
anchor_right = 0.32
anchor_bottom = 0.675
margin_left = 12.7715
margin_top = -6.13528
margin_right = 13.2114
margin_bottom = -13.5753
rect_rotation = 8.39806
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HE" type="TouchScreenButton" parent="HE"]
position = Vector2( 5.62723, 2.88458 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="HE"]
margin_left = 101.649
margin_top = 33.2484
margin_right = 154.649
margin_bottom = 76.2484
custom_fonts/font = SubResource( 6 )
text = "x2"

[node name="pause" type="TextureButton" parent="."]
anchor_left = 0.014
anchor_top = 0.02
anchor_right = 0.079
anchor_bottom = 0.128
margin_left = -0.372999
margin_top = -0.160003
margin_right = -0.573006
margin_bottom = 0.0799942
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -255.0
margin_right = 167.0
margin_bottom = 238.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="pause_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -205.0
margin_right = 130.0
margin_bottom = 205.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Button" parent="pause_menu/container"]
margin_right = 260.0
margin_bottom = 50.0
rect_min_size = Vector2( 165, 50 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Score Board"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="changeTeam" type="Button" parent="pause_menu/container"]
margin_top = 90.0
margin_right = 260.0
margin_bottom = 140.0
rect_min_size = Vector2( 165, 50 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Change Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="admin_menu" type="Button" parent="pause_menu/container"]
visible = false
margin_top = 180.0
margin_right = 260.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
disabled = true
text = "Admin Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="pause_menu/container"]
margin_top = 270.0
margin_right = 260.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Quit Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="pause_menu/container"]
margin_top = 360.0
margin_right = 260.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="kill_msg" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 208.0
margin_right = 320.0
margin_bottom = 428.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="1" type="RichTextLabel" parent="kill_msg"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="2" type="RichTextLabel" parent="kill_msg"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="3" type="RichTextLabel" parent="kill_msg"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="4" type="RichTextLabel" parent="kill_msg"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="5" type="RichTextLabel" parent="kill_msg"]
margin_top = 152.0
margin_right = 300.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="6" type="RichTextLabel" parent="kill_msg"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="Control2" type="Control" parent="."]
anchor_left = 0.824
anchor_top = 0.061
anchor_right = 0.824
anchor_bottom = 0.061
margin_left = 0.140747
margin_top = 0.101254
margin_right = 45.1407
margin_bottom = 25.1013
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextGun" type="TouchScreenButton" parent="Control2"]
position = Vector2( 29.01, -19.2737 )
rotation = -3.14159
scale = Vector2( 1, -1 )
normal = ExtResource( 13 )
pressed = ExtResource( 13 )
shape = SubResource( 11 )

[node name="Minimap" type="Panel" parent="."]
anchor_left = 0.999
anchor_top = 0.19
anchor_right = 0.999
anchor_bottom = 0.407
margin_left = -255.89
margin_top = 0.271805
margin_right = 0.109985
margin_bottom = 0.0317993
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Minimap" parent="Minimap" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 3.0
margin_top = 3.0
margin_right = 247.28
margin_bottom = 147.4

[node name="fps" type="Label" parent="."]
margin_left = 111.0
margin_top = 9.0
margin_right = 158.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_timer" type="Timer" parent="."]

[node name="pick" type="Button" parent="."]
visible = false
anchor_left = 0.452
anchor_top = 0.631
anchor_right = 0.552
anchor_bottom = 0.686
margin_left = 0.160645
margin_top = -0.0485535
margin_right = 0.160645
margin_bottom = 0.350952
custom_styles/normal = ExtResource( 9 )
text = "Pick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pic_touch" type="TouchScreenButton" parent="pick"]
position = Vector2( -5.17657, -4.85297 )
shape = SubResource( 13 )

[node name="cash" type="Label" parent="."]
visible = false
anchor_left = 0.452
anchor_top = 0.245
anchor_right = 0.522
anchor_bottom = 0.312
margin_left = 0.160645
margin_top = 0.210403
margin_right = -0.439331
margin_bottom = -0.0295868
rect_pivot_offset = Vector2( 44.5, 24 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.141176, 0.568627, 0.0235294, 1 )
text = "+ $10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controller" parent="." instance=ExtResource( 14 )]

[node name="reloading_txt" type="Label" parent="."]
visible = false
anchor_left = 0.428
anchor_top = 0.741
anchor_right = 0.572
anchor_bottom = 0.792
margin_left = 0.159973
margin_top = -0.0789795
margin_right = -0.160034
margin_bottom = 0.200989
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.890196, 0.858824, 0.0705882, 1 )
text = "Reloading . . ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_AP" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -161.5
margin_top = -91.0
margin_right = 161.5
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="TextureRect" parent="HP_AP"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="HP_AP/HP"]
anchor_left = 1.0
anchor_top = 0.469
anchor_right = 1.0
anchor_bottom = 0.469
margin_left = 1.498
margin_top = -22.024
margin_right = 83.498
margin_bottom = 21.976
custom_fonts/font = ExtResource( 16 )
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AP" type="TextureRect" parent="HP_AP"]
anchor_left = 0.63
anchor_top = 0.527
anchor_right = 0.63
anchor_bottom = 0.527
margin_left = -49.49
margin_top = -47.27
margin_right = 46.51
margin_bottom = 48.73
texture = ExtResource( 18 )
expand = true

[node name="Label" type="Label" parent="HP_AP/AP"]
anchor_left = 1.0
anchor_top = 0.469
anchor_right = 1.0
anchor_bottom = 0.469
margin_left = 1.498
margin_top = -22.024
margin_right = 83.498
margin_bottom = 21.976
custom_fonts/font = ExtResource( 16 )
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/melee" to="." method="_on_melee_pressed"]
[connection signal="pressed" from="reload/btn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="zoom/zoom" to="." method="_on_zoom_pressed"]
[connection signal="pressed" from="HE/HE" to="." method="_on_HE_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="pause_menu/container/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="pause_menu/container/changeTeam" to="." method="_on_changeTeam_pressed"]
[connection signal="pressed" from="pause_menu/container/admin_menu" to="." method="_on_admin_menu_pressed"]
[connection signal="pressed" from="pause_menu/container/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="pause_menu/container/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control2/nextGun" to="." method="_on_nextGun_pressed"]
[connection signal="timeout" from="fps_timer" to="." method="_on_fps_timer_timeout"]
[connection signal="pressed" from="pick/pic_touch" to="." method="_on_pic_touch_pressed"]
